Updating scripts for ES7